meja/tests/shadowing-module-prover-checked.meja
module M = {};

module T = {
  Prover {
    module M = {};
  };
};

open T;

module M' = M;
